--- a/contact.html
+++ b/contact.html
@@ -80,10 +80,9 @@
         </div>
 
         <div style="justify-content: center;">
-          <iframe src="https://maps.google.com/maps?q=42.302075, -83.071184&z=15&output=embed" width="100%" height="350"
+          <iframe src="https://maps.google.com/maps?q=42.304081, -83.066012&z=15&output=embed" width="100%" height="350"
             frameborder="0" style="border:0"></iframe>
         </div>
-
         <div class="row mt-5">
 
           <div class="col-lg-4">
@@ -91,7 +90,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>3141 Donnelly St. Windsor ON N9C 1M3</p>
+                <p>Windsor, Ontario, Canada</p>
               </div>
 
               <div class="email">
