--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>An enthusiast Engineer with a keen interest in Cloud and DevOps domain. Infrastructure as code (IaC)
-            and constructing Continous Integration, Continuous Delivery(CI/CD) pipelines are some of my key strengths.
+            and constructing Continuous Integration, Continuous Delivery(CI/CD) pipelines are some of my key strengths.
           </p>
         </div>
 
