--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Anisha Gharat</h4>
               <p><em>Innovative and deadline-driven engineer with 2+ years of experience designing and developing cloud solution architectures. Strong leadership skills developed through clubs and volunteering experiences during the undergraduate degree.</em></p>
