--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Anisha Gharat</h1>
-      <h2>Cloud and DevOps Engineer</h2>
+      <h2>Actively looking for Summer 2022 Coop/Internship opportunities</h2>
       <a href="about.html" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
