--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Master's</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> anisha.gharat@gmail.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Coop/Internship:</strong> Available for 2022 summer
+                  <li><i class="bi bi-rounded-right"></i> <strong>Co-op/Internship:</strong> Available for 2022 summer
                     opportunities(4-8 months)</li>
                 </ul>
               </div>
