Updated for full time

--- a/resume.html
+++ b/resume.html
@@ -84,7 +84,7 @@
               <p><em>Innovative and deadline-driven engineer with 2+ years of experience designing and developing cloud solution architectures. Strong leadership skills developed through clubs and volunteering experiences during the undergraduate degree.</em></p>
               <p>
               <ul>
-                <li>3141 Donnelly St, Windsor, ON, N9C 1M3</li>
+                <li>105 George Street, Toronto, ON, M5A 0L4</li>
                 <li>(+1) 226-724-0972</li>
                 <li>anisha.gharat@gmail.com</li>
               </ul>
@@ -94,9 +94,9 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master of Applied Computing</h4>
-              <h5>2020 - Present</h5>
+              <h5>2021 - Present</h5>
               <p><em>University of Windsor, Ontario, Canada</em></p>
-              <p>Relevant Coursework: Advanced Software Engineering, Advanced Computing Concepts, Advanced Database Topics, Artificial Intelligence</p>
+              <p>Relevant Coursework: Advanced Software Engineering, Advanced Computing Concepts, Advanced Database Topics, Advanced System Programming, Internet Applications</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Computer Engineering</h4>
@@ -106,6 +106,35 @@
             </div>
             <h3 class="resume-title">Academic Projects</h3>
             <div class="resume-item">
+                <h4>Movie Database</h4>
+                <h5>Jan 2022 - April 2022</h5>
+                <p><em>University of Windsor, Windsor, Canada | Internet Applications Project</em></p>
+                <p>
+                <ul>
+                  <li>Developed the frontend and backend of a web application portal that allows users to view existing movies in the database and filter them based on their titles and genres.</li>
+                  <li>Designed and integrated the model-template-view architectural pattern using the Django framework.</li>
+                  <li>Defined and structured models to store the data with the right relationships.</li>
+                </ul>
+                </p>
+              </div>
+              <div class="resume-item">
+                <h4>Traverse Windsor</h4>
+                <h5>May 2021 - August 2021</h5>
+                <p><em>University of Windsor, Windsor, Canada | Advanced Software Engineering Project</em></p>
+                <p>
+                <ul>
+                  <li>Awarded as the most innovative project of the year by the Computer Science department.</li>
+                  <li>Managed the software development lifecycle, as a Scrum Master, of a cross-platform application which
+                    is a one-stop-shop for all the happenings in the city of Windsor.</li>
+                  <li>DConducted stand-up meetings to keep a track of Jira, which was used as an Agile project
+                    management tool.</li>
+                    <li>Maintained technical and business documentation at every phase of the project lifecycle.</li>
+                    <li>Developed and packaged the backend of the application using ExpressJS.</li>
+                    <li>Implemented APIs for AWS DynamoDB create, read, update, and delete operations.</li>
+                </ul>
+                </p>
+              </div>
+              <div class="resume-item">
               <h4>Loan Prediction Web Application</h4>
               <h5>2018 - 2019</h5>
               <p><em>Mumbai University, Mumbai, India | Final Year Project</em></p>
@@ -123,45 +152,49 @@
             <h3 class="resume-title">Courses and Certifications</h3>
             <div class="resume-item">
               <ul>
-                <li>Google Cloud Certified Associate Cloud Engineer</li>
                 <li>HashiCorp Certified Terraform Associate</li>
+                <li>Google Cloud Certified Associate Cloud Engineer</li>
                 <li>Docker and Kubernetes: The Complete Guide - Udemy</li>
                 <li>Algorithms and Data Structures in Python - Udemy</li>
-              </ul>
-            </div>
-            <h3 class="resume-title">Awards and Honors</h3>
-            <div class="resume-item">
-              <ul>
-                <li>Secured 3rd place in the Computer Engineering Department with a CGPI of 9.15.</li>
-                <li>Shortlisted for the Narotam Sekhsaria Scholarship for an all-round achievement in the final year Engineering.</li>
-                <li>INSPIRE Scholarship for securing a place within top 1% at the HSC examinations (2015).</li>
-                <li>Award for scoring an aggregate of 90% and above in the ICSE examinations (2013).</li>
-                <li>Secured 3rd place in the District Level Lawn Tennis tournament.</li>
-                <li>Represented the state of Maharashtra (India) in the sport of Lawn Tennis.</li>
               </ul>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>DevOps Developer Intern</h4>
+              <h5>May 2022 - Present</h5>
+              <p><em>Kinaxis, Canada</em></p>
+              <p>
+              <ul>
+                <li>Brainstormed solutions to modify the Jenkins plugin, FlowNode, to accommodate exception handling.</li>
+                <li>Contributed to the Jenkins plugin, Pipeline Groovy Library, to add a new feature.</li>
+                <li>Implemented solutions using object-oriented concepts to enhance the build pipelines.</li>
+                <li>Programmed solutions using Groovy executing commands from PowerShell scripts.</li>
+                <li>Crafted enhanced tests using various JUnit rules to verify the desired executions of new features.</li>
+              </p>
+            </div>
+            <div class="resume-item">
               <h4>Platform Engineer</h4>
-              <h5>2019 - 2021</h5>
+              <h5>June 2019 - April 2021</h5>
               <p><em>Quantiphi, Mumbai, India </em></p>
               <p>
               <ul>
-                <li>Developed solutions for clients using Python programming language.</li>
-                <li>Containerized the applications using Docker for the deployment on cloud.</li>
-                <li>Architected and deployed solutions on cloud platforms using the various services such as Cloud
-                  Functions, Lambdas, Firestore, DynamoDB, MongoDB and Azure Web Apps of the Google Cloud
-                  Platform, Amazon Web Services and Microsoft Azure.</li>
-                <li>Maintained the best coding and testing practices by using Git and deploying CI/CD pipelines ensuring
-                  unit testing using Pytest.</li>
+                <li>Proposed solutions to clients keeping in mind their requirements.</li>
+                <li>Developed solutions for clients using Boto3, Client and Azure libraries for Python.</li>
+                <li>Architected and deployed solutions on cloud platforms using various services such as Cloud Functions, Lambdas, Firestore, DynamoDB, MongoDB and Azure Web Apps of the Google Cloud Platform, Amazon Web Services and Microsoft Azure.</li>
+                <li>Automated infrastructure deployments on the cloud using Terraform.</li>
+                <li>Ensured cloud network security through Virtual Private Cloud while implementing knowledge of HTTP, HTTPS, and SSL protocols.</li>
+                <li>Containerized the applications using Docker for deployments on the cloud, assuring scaling and management through Kubernetes.</li>
+                <li>Developed scripts for deployment of cloud services through AWS CLI, Azure CLI and gcloud CLI.</li>
+                <li>Maintained the best coding and testing practices by using Git and deploying CI/CD pipelines, ensuring unit testing using Pytest.</li>
+                <li>Documented, developed, and tested APIs using Swagger and Postman.</li>
               </ul>
               </p>
             </div>
             <div class="resume-item">
               <h4>Android Developer Intern</h4>
-              <h5>2017 - 2018</h5>
+              <h5>December 2017 - January 2018</h5>
               <p><em>Mobileware Technologies, Mumbai, India</em></p>
               <p>
               <ul>
@@ -174,30 +207,26 @@
             </div>
             <h3 class="resume-title">Extra-Curricular Activities</h3>
           <div class="resume-item">
-            <h4>Vice President</h4>
-            <h5>2017 - 2019</h5>
-            <p><em>Rotaract Club of Father Conceicao Rodrigues College of Engineering, Mumbai, India </em></p>
+            <h4>Public Relations Director | Vice President</h4>
+            <h5>2016 - 2019</h5>
+            <p><em>Rotaract Club, Father Conceicao Rodrigues College of Engineering, Mumbai, India</em></p>
             <p>
             <ul>
-              <li>Led a team as the Vice President of the Club to conduct many college based events which included a Donation Drive to raise funds for the NGO, Bigger Than Life( BTL).</li>
-              <li>Organized many events for the social cause which included the Clean Up Drive at the Dadar beach.</li>
-              <li>Led the team during our flagship event, The Heart and Sole Run, which attracted a crowd of nearly 500 participants, conducted in association with BTL to raise funds for the NGO.</li>
-              <li>Organized and participated in communication building workshops for the children of the NGOs.</li>
-              <li>Handled budgets for every event the club conducted.</li>
+              <li>Led a team with a motive to help various NGOs in need of quality resources to support their causes.</li>
+              <li>Organized and participated in communication-building workshops for the children of the NGOs</li>
             </ul>
             </p>
           </div>
+          <h3 class="resume-title">Awards and Honors</h3>
           <div class="resume-item">
-            <h4>Public Relations Director</h4>
-            <h5>2016 - 2017</h5>
-            <p><em>Rotaract Club of Father Conceicao Rodrigues College of Engineering, Mumbai, India </em></p>
-            <p>
             <ul>
-              <li>Conversed with diverse people, planned out strategies to sell out the events conducted by the club in the tenure.</li>
-              <li>Strategized one-to-one and social media marketing tactics.</li>
-              <li>Developed excellent public speaking skills and knowledge of Public Relations as a whole.</li>
+              <li>Secured 3rd place in the Computer Engineering Department with a CGPI of 9.15.</li>
+              <li>Shortlisted for the Narotam Sekhsaria Scholarship for an all-round achievement in the final year Engineering.</li>
+              <li>INSPIRE Scholarship for securing a place within top 1% at the HSC examinations (2015).</li>
+              <li>Award for scoring an aggregate of 90% and above in the ICSE examinations (2013).</li>
+              <li>Secured 3rd place in the District Level Lawn Tennis tournament.</li>
+              <li>Represented the state of Maharashtra (India) in the sport of Lawn Tennis.</li>
             </ul>
-            </p>
           </div>
           </div>
         </div>
