--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://github.com/AnishaGharat" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/AnishaGharat" class="github" target="_blank"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/anisha-gharat-1a133914/" class="linkedin"><i
             class="bi bi-linkedin"></i></i></a>
       </div>
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Currently pursuing Master of Applied Computing from University of Windsor.</p>
+          <p>Master of Applied Computing from University of Windsor.</p>
         </div>
 
         <div class="row">
@@ -94,17 +94,17 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 9 April 1997</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 24</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 25</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +1 226-724-0972</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Windsor, ON, Canada</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Toronto, ON, Canada</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Master's</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> anisha.gharat@gmail.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Co-op/Internship:</strong> Available for 2022 summer
-                    opportunities(4-8 months)</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Full-time:</strong> Available for full-time opportunities
+                    starting January 2023</li>
                 </ul>
               </div>
             </div>
@@ -180,9 +180,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Jenkins <i class="val">60%</i></span>
+              <span class="skill">Jenkins <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -225,6 +225,13 @@
               <span class="skill">Android Programming <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Groovy<i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
