--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         </div>
 
         <div style="justify-content: center;">
-          <iframe src="https://maps.google.com/maps?q=42.304081, -83.066012&z=15&output=embed" width="100%" height="350"
+          <iframe src="https://maps.google.com/maps?q=43.652222, -79.370876&z=15&output=embed" width="100%" height="350"
             frameborder="0" style="border:0"></iframe>
         </div>
         <div class="row mt-5">
@@ -90,7 +90,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Windsor, Ontario, Canada</p>
+                <p>Toronto, Ontario, Canada</p>
               </div>
 
               <div class="email">
