--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Master of Applied Computing from University of Windsor.</p>
+          <p>Masters' of Applied Computing from University of Windsor</p>
         </div>
 
         <div class="row">
@@ -101,7 +101,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Master's</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Masters'</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> anisha.gharat@gmail.com</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Full-time:</strong> Available for full-time opportunities
                     starting January 2023</li>
