--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -70,7 +70,7 @@
             <div class="portfolio-info">
               <h3>Article Details</h3>
               <ul>
-                <li><strong>Category</strong>: Continous Integration Continous Delivery</li>
+                <li><strong>Category</strong>: Continuous Integration Continuous Delivery</li>
                 <li><strong>Cloud Platform</strong>: Google Cloud Platform</li>
                 <li><strong>Cloud Services</strong>: Cloud Source Repositories, Cloud Build, App Engine, Cloud Run</li>
                 <li><strong>Article URL</strong>: <a href="https://medium.com/@anisha.gharat/continuous-deployment-on-google-cloud-platform-app-engine-flexible-and-cloud-run-using-cloud-a12409b731e9">Click Here</a></li>
