--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                 </svg>
                 <i class="bx bxl-google-cloud"></i>
               </div>
-              <h4>Continuous Integration & Continous Delivery with Google Cloud Platform</h4>
+              <h4>Continuous Integration & Continuous Delivery with Google Cloud Platform</h4>
               <p><b>Platform Engineer: Quantiphi Analytics Pvt. Ltd.</b></p>
             </div>
           </div>
