--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,12 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Anisha Gharat</h4>
-              <p><em>Innovative and deadline-driven engineer with 2+ years of experience designing and developing cloud solution architectures. Strong leadership skills developed through clubs and volunteering experiences during the undergraduate degree.</em></p>
+              <p><ul>
+                <li>Highly skilled DevOps developer with a proven track record of designing and implementing effective solutions in public and hybrid cloud environments.</li>
+                <li>Strong leadership and interpersonal communication skills developed through campus clubs and volunteering experiences.</li>
+                <li>Delivered solutions in critical thinking environments, maintaining organizational skills with responsibilities on the rise at the workplace.</li>
+                <li>Acquainted with a completely new domain of the cloud by displaying quick grasping and implementation skills.</li>
+              </ul></p>
               <p>
               <ul>
                 <li>105 George Street, Toronto, ON, M5A 0L4</li>
@@ -94,84 +99,85 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master of Applied Computing</h4>
-              <h5>2021 - Present</h5>
+              <h5> May 2021 - Dec 2022</h5>
               <p><em>University of Windsor, Ontario, Canada</em></p>
-              <p>Relevant Coursework: Advanced Software Engineering, Advanced Computing Concepts, Advanced Database Topics, Advanced System Programming, Internet Applications</p>
+              <p><ul>
+                <li>Achieved an overall GPA of 4.</li>
+                <li>Received the Innovative Project award for a mobile native application from the Computer Science department.</li>
+              </ul></p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Computer Engineering</h4>
-              <h5>2015 - 2019</h5>
+              <h5>June 2015 - June 2019</h5>
               <p><em>Mumbai University, Mumbai, India</em></p>
-              <p>Relevant Coursework: Analysis of Algorithms, Database Management, Cloud Computing, Networking</p>
-            </div>
-            <h3 class="resume-title">Academic Projects</h3>
-            <div class="resume-item">
-                <h4>Movie Database</h4>
-                <h5>Jan 2022 - April 2022</h5>
-                <p><em>University of Windsor, Windsor, Canada | Internet Applications Project</em></p>
-                <p>
-                <ul>
-                  <li>Developed the frontend and backend of a web application portal that allows users to view existing movies in the database and filter them based on their titles and genres.</li>
-                  <li>Designed and integrated the model-template-view architectural pattern using the Django framework.</li>
-                  <li>Defined and structured models to store the data with the right relationships.</li>
-                </ul>
-                </p>
-              </div>
-              <div class="resume-item">
-                <h4>Traverse Windsor</h4>
-                <h5>May 2021 - August 2021</h5>
-                <p><em>University of Windsor, Windsor, Canada | Advanced Software Engineering Project</em></p>
-                <p>
-                <ul>
-                  <li>Awarded as the most innovative project of the year by the Computer Science department.</li>
-                  <li>Managed the software development lifecycle, as a Scrum Master, of a cross-platform application which
-                    is a one-stop-shop for all the happenings in the city of Windsor.</li>
-                  <li>DConducted stand-up meetings to keep a track of Jira, which was used as an Agile project
-                    management tool.</li>
-                    <li>Maintained technical and business documentation at every phase of the project lifecycle.</li>
-                    <li>Developed and packaged the backend of the application using ExpressJS.</li>
-                    <li>Implemented APIs for AWS DynamoDB create, read, update, and delete operations.</li>
-                </ul>
-                </p>
-              </div>
-              <div class="resume-item">
-              <h4>Loan Prediction Web Application</h4>
-              <h5>2018 - 2019</h5>
-              <p><em>Mumbai University, Mumbai, India | Final Year Project</em></p>
-              <p>
-              <ul>
-                <li>Designed and developed the user interface of a web application that predicts if a customer is capable of
-                  paying the loan or not.</li>
-                <li>Integrated the frontend, developed using HTML and CSS, with the backend of the application that uses
-                  the SQLite database.</li>
-                <li>Analyzed the various Machine Learning models to find the best fit solution for the use case.</li>
-                <li>Packaged the whole application using Flask as a framework.</li>
-              </ul>
-              </p>
+              <p><ul>
+                <li>Achieved an overall CGPA of 9.15..</li>
+                <li>Received an overall achievement for securing 3rd place in the Computer Science Department.</li>
+              </ul></p>
             </div>
             <h3 class="resume-title">Courses and Certifications</h3>
             <div class="resume-item">
               <ul>
+                <li>Microsoft Certified Azure Fundamentals : AZ-900</li>
                 <li>HashiCorp Certified Terraform Associate</li>
                 <li>Google Cloud Certified Associate Cloud Engineer</li>
-                <li>Docker and Kubernetes: The Complete Guide - Udemy</li>
-                <li>Algorithms and Data Structures in Python - Udemy</li>
               </ul>
             </div>
+            <h3 class="resume-title">Techical Talks</h3>
+            <h5>Speaker | Role of Cloud Computing (Google Cloud Platform) in Industry 4.0 Jun 2020</h5>
+            <div class="resume-item">
+              <ul>
+               <li>Invited as a speaker in a national-level faculty development program conducted by the University of
+                Mumbai, which had a turnover of 600 participants.</li>
+                <li>Demonstrated a data processing solution using Cloud Dataflow, Cloud Pub/Sub, BigQuery and Google
+                  Data Studio.</li>
+              </ul>
+            </div>
+            <h3 class="resume-title">Extra-Curricular Activities</h3>
+           <div class="resume-item">
+            <h4>Public Relations Director | Vice President</h4>
+            <h5>2016 - 2019</h5>
+            <p><em>Rotaract Club, Father Conceicao Rodrigues College of Engineering, Mumbai, India</em></p>
+            <p>
+            <ul>
+              <li>Led a team with a motive to help various NGOs in need of quality resources to support their causes.</li>
+              <li>Organized and participated in communication-building workshops for the children of the NGOs</li>
+            </ul>
+            </p>
+          </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Senior Software Engineer - Cloud Security</h4>
+              <h5>Jan 2019 - Present</h5>
+              <p><em>RBC, Toronto, Canada </em></p>
+              <p>
+              <ul>
+                <li>Collaborated with cross-functional teams to ensure adherence to security best practices throughout the
+                  development lifecycle.</li>
+                <li>Implemented containerized workflows using Kubernetes, Helm, Jenkins and OpenShift for hybrid cloud
+                  platforms.</li>
+                <li>Designed and implemented secure DevOps solutions by developing security controls using Sentinel,
+                  Open Policy Agent, Azure Policies, Google Security Command Centre, and AWS Config rules.</li>
+                <li>Built and maintained Python SDK packages for enterprise-level applications, improving development
+                  efficiency and code reusability.</li>
+              </ul>
+              </p>
+            </div>
             <div class="resume-item">
               <h4>DevOps Developer Intern</h4>
               <h5>May 2022 - Present</h5>
               <p><em>Kinaxis, Canada</em></p>
               <p>
               <ul>
-                <li>Brainstormed solutions to modify the Jenkins plugin, FlowNode, to accommodate exception handling.</li>
+                <li>Participated in the annual hackathon to implement a caching mechanism using C# and the .NET framework, incorporating various NuGet packages.</li>
+                <li>Enhanced CI/CD Jenkins pipelines to improve the overall infrastructure builds.</li>
+                <li>Designed a logging pipeline using Logstash for relaying data to Elasticsearch and indexing in Kibana.</li>
                 <li>Contributed to the Jenkins plugin, Pipeline Groovy Library, to add a new feature.</li>
                 <li>Implemented solutions using object-oriented concepts to enhance the build pipelines.</li>
-                <li>Programmed solutions using Groovy executing commands from PowerShell scripts.</li>
-                <li>Crafted enhanced tests using various JUnit rules to verify the desired executions of new features.</li>
+                <li>Programmed solutions using Groovy, executing commands from PowerShell scripts.</li>
+                <li>Crafted enhanced tests using various JUnit rules to verify the desired execution of new features.</li>
               </p>
             </div>
             <div class="resume-item">
@@ -184,7 +190,6 @@
                 <li>Developed solutions for clients using Boto3, Client and Azure libraries for Python.</li>
                 <li>Architected and deployed solutions on cloud platforms using various services such as Cloud Functions, Lambdas, Firestore, DynamoDB, MongoDB and Azure Web Apps of the Google Cloud Platform, Amazon Web Services and Microsoft Azure.</li>
                 <li>Automated infrastructure deployments on the cloud using Terraform.</li>
-                <li>Ensured cloud network security through Virtual Private Cloud while implementing knowledge of HTTP, HTTPS, and SSL protocols.</li>
                 <li>Containerized the applications using Docker for deployments on the cloud, assuring scaling and management through Kubernetes.</li>
                 <li>Developed scripts for deployment of cloud services through AWS CLI, Azure CLI and gcloud CLI.</li>
                 <li>Maintained the best coding and testing practices by using Git and deploying CI/CD pipelines, ensuring unit testing using Pytest.</li>
@@ -192,42 +197,6 @@
               </ul>
               </p>
             </div>
-            <div class="resume-item">
-              <h4>Android Developer Intern</h4>
-              <h5>December 2017 - January 2018</h5>
-              <p><em>Mobileware Technologies, Mumbai, India</em></p>
-              <p>
-              <ul>
-                <li>Worked as an intern under a team which had been appointed for making an UPI based application for a bank.</li>
-                <li>As an intern many industrial roles were assigned to me which included meeting the client demands, negotiating the client demands and many advanced features of Android which made use of the Unified Payments Interface (UPI) .</li>
-                <li>Android Studio was used for developing the mobile application, SQLite was used as the database.</li>
-                <li>Detailed knowledge of the functioning of the National Payments Corporation of India (NPCI) was also explained to me in the process as it was the main crux of the application the team was working on.</li>
-              </ul>
-              </p>
-            </div>
-            <h3 class="resume-title">Extra-Curricular Activities</h3>
-          <div class="resume-item">
-            <h4>Public Relations Director | Vice President</h4>
-            <h5>2016 - 2019</h5>
-            <p><em>Rotaract Club, Father Conceicao Rodrigues College of Engineering, Mumbai, India</em></p>
-            <p>
-            <ul>
-              <li>Led a team with a motive to help various NGOs in need of quality resources to support their causes.</li>
-              <li>Organized and participated in communication-building workshops for the children of the NGOs</li>
-            </ul>
-            </p>
-          </div>
-          <h3 class="resume-title">Awards and Honors</h3>
-          <div class="resume-item">
-            <ul>
-              <li>Secured 3rd place in the Computer Engineering Department with a CGPI of 9.15.</li>
-              <li>Shortlisted for the Narotam Sekhsaria Scholarship for an all-round achievement in the final year Engineering.</li>
-              <li>INSPIRE Scholarship for securing a place within top 1% at the HSC examinations (2015).</li>
-              <li>Award for scoring an aggregate of 90% and above in the ICSE examinations (2013).</li>
-              <li>Secured 3rd place in the District Level Lawn Tennis tournament.</li>
-              <li>Represented the state of Maharashtra (India) in the sport of Lawn Tennis.</li>
-            </ul>
-          </div>
           </div>
         </div>
 
