--- a/about.html
+++ b/about.html
@@ -87,14 +87,14 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Cloud and DevOps Engineer</h3>
             <p class="fst-italic">
-              Two years experience in Cloud and DevOps domain. In-depth knowledge of Google Cloud Platform, Amazon Web
+              3+ experience in Cloud and DevOps domain. In-depth knowledge of Google Cloud Platform, Amazon Web
               Services and Microsoft Azure.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 9 April 1997</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 25</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 26</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +1 226-724-0972</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Toronto, ON, Canada</li>
                 </ul>
@@ -103,21 +103,15 @@
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Masters'</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> anisha.gharat@gmail.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Full-time:</strong> Available for full-time opportunities
-                    starting January 2023</li>
                 </ul>
               </div>
             </div>
             <div>
             <ul style = "list-style: disc; list-style-position: inside">
-              <li>Strong leadership and interpersonal communication skills developed through campus clubs and
-                volunteering experiences.</li>
-                <li>2+ years of experience delivering technology-based customer-facing solutions in collaboration with
-                diverse teams.</li>
-                <li>Delivered solutions in critical thinking environments, maintaining organizational skills with
-                responsibilities on the rise at the workplace.</li>
-                <li>Acquainted with a completely new domain of cloud by displaying quick grasping and implementation
-                skills.</li>
+                <li>Highly skilled DevOps developer with a proven track record of designing and implementing effective solutions in public and hybrid cloud environments.</li>
+                <li>Strong leadership and interpersonal communication skills developed through campus clubs and volunteering experiences.</li>
+                <li>Delivered solutions in critical thinking environments, maintaining organizational skills with responsibilities on the rise at the workplace.</li>
+                <li>Acquainted with a completely new domain of the cloud by displaying quick grasping and implementation skills.</li>
             </ul>
           </div>
           </div>
