update github, linkedln

--- a/about.html
+++ b/about.html
@@ -60,11 +60,9 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://github.com/AnishaGharat" class="github" target="_blank"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/anisha-gharat-1a133914/" class="linkedin"><i
-            class="bi bi-linkedin"></i></i></a>
+        <a href="https://github.com/AnishaGharat" class="github"><i class="bi bi-github" style="color: #1b1818; font-size: 30px;"></i></a>
+        <a href="https://www.linkedin.com/in/anisha-gharat-1a133914/" class="linkedin"><i class="bi bi-linkedin"style="color: #025cf7; font-size: 30px;"></i></i></a>
       </div>
-
     </div>
 
   </header><!-- End Header -->
