--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,8 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://github.com/AnishaGharat" class="github"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/anisha-gharat-1a133914/" class="linkedin"><i
-            class="bi bi-linkedin"></i></i></a>
+        <a href="https://github.com/AnishaGharat" class="github"><i class="bi bi-github" style="color: #1b1818; font-size: 30px;"></i></a>
+        <a href="https://www.linkedin.com/in/anisha-gharat-1a133914/" class="linkedin"><i class="bi bi-linkedin"style="color: #025cf7; font-size: 30px;"></i></i></a>
       </div>
 
     </div>
@@ -94,7 +93,7 @@
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
+               <a href = "mailto: anisha.gharat@gmail.com"> <i class="bi bi-envelope"></i></a>
                 <h4>Email:</h4>
                 <p>anisha.gharat@gmail.com</p>
               </div>
@@ -102,7 +101,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 226 724 0972</p>
+                <p>(+1)226-724-0972</p>
               </div>
 
             </div>
