--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,8 +57,8 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://github.com/AnishaGharat" class="github"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/anisha-gharat-1a133914/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://github.com/AnishaGharat" class="github"><i class="bi bi-github" style="color: #1b1818; font-size: 30px;"></i></a>
+        <a href="https://www.linkedin.com/in/anisha-gharat-1a133914/" class="linkedin"><i class="bi bi-linkedin"style="color: #025cf7; font-size: 30px;"></i></i></a>
       </div>
 
     </div>
