corrected about, resume

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
               </div>
             </div>
             <div>
-            <ul style = "list-style: disc; list-style-position: inside">
+            <ul style = "list-style: disc;">
                 <li>Highly skilled DevOps developer with a proven track record of designing and implementing effective solutions in public and hybrid cloud environments.</li>
                 <li>Strong leadership and interpersonal communication skills developed through campus clubs and volunteering experiences.</li>
                 <li>Delivered solutions in critical thinking environments, maintaining organizational skills with responsibilities on the rise at the workplace.</li>
