--- a/resume.html
+++ b/resume.html
@@ -111,7 +111,7 @@
               <h5>June 2015 - June 2019</h5>
               <p><em>Mumbai University, Mumbai, India</em></p>
               <p><ul>
-                <li>Achieved an overall CGPA of 9.15..</li>
+                <li>Achieved an overall CGPA of 9.15.</li>
                 <li>Received an overall achievement for securing 3rd place in the Computer Science Department.</li>
               </ul></p>
             </div>
@@ -141,7 +141,7 @@
             <p>
             <ul>
               <li>Led a team with a motive to help various NGOs in need of quality resources to support their causes.</li>
-              <li>Organized and participated in communication-building workshops for the children of the NGOs</li>
+              <li>Organized and participated in communication-building workshops for the children of the NGOs.</li>
             </ul>
             </p>
           </div>
